fix z-index

--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -64,6 +64,7 @@ body {
     }
   }
   &__img {
+    z-index: -10;
     img {
       @include for-size(tablet) {
         position: absolute;
